[project]
name = "crewai-data-analyst"
version = "0.1.0"
description = "CrewAI agent for data analysis with vnstock integration"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.30.0",
    "crewai-tools>=0.4.0",
    "streamlit>=1.47.1",
    "vnstock>=3.2.6",
    "pandas>=2.0.0",
    "pandasai>=2.0.0",
    "openai>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
run_crew = "main:kickoff"
